[package]
name = "argonian"
version = "0.1.0"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }

argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"], default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
